[package]
name = "photoweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kamadak-exif = "0.5.5"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
walkdir = "2.3.2"
argparse = "0.2.2"
image = "0.24.7"
